# LIMA

./: .gitignore  .install.sh.kate-swp  CMakeLists.txt  LICENSE.txt  README.md  install.sh  recompile.sh  selftest.sh
code/: CMakeLists.txt  copyToUserProgram.sh  recompile.sh
code/LIMA/: BuildMembrane.h  CMakeLists.txt  GetForcefieldParams.h  argparser.h  editconf.h  em.h  insertmolecule.h  insertmolecules.h  lima.cpp  makebox.h  mdrun.h  render.h  selftest.h
code/LIMA_APP/: CMakeLists.txt  autorecompile.h  lima.cpp  mdrun.h
code/LIMA_BASE/: CMakeLists.txt
code/LIMA_BASE/include/: Bodies.cuh  BoundaryCondition.cuh  BoundaryConditionPublic.h  BoxGrid.cuh  CommandlineUtils.h  Constants.cuh  Constants.h  DefaultUserConstants.h  EngineCore.h  Filehandling.h  Forcefield.cuh  Forcefield.h  ForcefieldTypes.h  Geometry.cuh  LimaScaleSystem.cuh  LimaTypes.cuh  MDFiles.h  MoleculeGraph.h  MoleculeHull.cuh  MoleculeUtils.h  PhysicsUtils.cuh  PhysicsUtilsDevice.cuh  PlotUtils.h  Printer.h  RenderUtilities.cuh  Simulation.cuh  Statistics.h  TimeIt.h  Trajectory.h  Utilities.h
code/LIMA_BASE/src/: Bodies.cpp  Bodies.cu  BoundaryConditionPublic.cpp  BoxGrid.cu  Filehandling.cpp  Forcefield.cpp  Forcefield.cu  Geometry.cpp  LimaTypes.cpp  MDFiles.cpp  MDFilesSerialization.h  MoleculeGraph.cpp  MoleculeHull.cpp  MoleculeUtils.cpp  PlotUtils.cpp  Printer.cpp  Simulation.cpp  Simulation.cu  Statistics.cpp  TimeIt.cpp  Topologyfile.cpp  TrrFileInterface.cpp  utilities.cpp
code/LIMA_CONVEXHULLENGINE/: CMakeLists.txt
code/LIMA_DEPENDS/: CMakeLists.txt
code/LIMA_DEPENDS/qhull/: LIMA_MODIFICATIONS.txt
code/LIMA_ENGINE/: .CMakeLists.txt.kate-swp  CMakeLists.txt
code/LIMA_ENGINE/include/: BoundaryCondition.cuh  BoundaryConditionPublic.h  ConvexHullEngine.cuh  DeviceAlgorithms.cuh  Engine.cuh  EngineUtils.cuh  EngineUtilsWarnings.cuh  ForceComputations.cuh  Forcefield.cuh  LimaPositionSystem.cuh  Neighborlists.cuh  PMEtest.cuh  SimulationDevice.cuh
code/LIMA_ENGINE/src/: BoundaryCondition.cuh  BoundaryConditionPublic.cpp  ChargeBlock.cuh  ChargeOcttree.cu  ChargeOcttree.cuh  ConvexHullEngine.cu  DeviceAlgorithms.cuh  DeviceAlgorithmsPrivate.cuh  Electrostatics.cuh  Engine.cu  EngineBodies.cuh  EngineHostside.h  EngineKernels.cu  EngineKernels.cuh  EngineKernels.cuh.autosave  EngineMain.cpp  EngineMain.cu  EngineUtils.cu  EngineUtils.cuh  EngineUtilsWarnings.cuh  ForceComputations.cuh  Forcefield.cu  KernelConstants.cuh  KernelWarnings.cuh  LennardJonesInteractions.cuh  LennardJonesInteractions.cuh.autosave  Main.cpp  Neighborlists.cpp  Neighborlists.cu  Neighborlists.cuh  PME.cuh  PME1.cuh  PMEfast.cu  PMEfast.cuh  SimulationDevice.cpp  SimulationDevice.cu  SimulationDevice.cuh  SolventBlockTransfers.cuh  SupernaturalForces.cuh  Thermostat.cpp  (+2 more)
code/LIMA_FORCEFIELDMAKER/: CMakeLists.txt
code/LIMA_FORCEFIELDMAKER/include/: Filehandling.h  ForcefieldMaker.h  ForcefieldMerger.h  ForcefieldTypes.h
code/LIMA_FORCEFIELDMAKER/src/: ForcefieldMerger.cpp  ForcefieldTypes.cpp  LIMA_ForcefieldMaker.cpp
code/LIMA_MD/: CMakeLists.txt
code/LIMA_MD/include/: Analyzer.cuh  BoxBuilder.cuh  CompoundBuilder.h  Display.h  DisplayV2.h  Environment.h  Lipids.h  Programs.h  Rasterizer.cuh  SimulationBuilder.h  VirtualPathMaker.h
code/LIMA_MD/src/: Analyzer.cu  BoxBuilder.cpp  BoxBuilder.cu  BoxBuilder.cuh  ChemfilesInterface.cpp  ChemfilesInterface.h  CompoundBuilder.cpp  Display.cpp  DisplayV2.cpp  DisplayV2.h  Environment.cpp  GLShader.h  Interface.cpp  Lipids.cpp  Main.cpp  Programs.cpp  Rasterizer.cu  Rasterizer.cuh  Render.cpp  Rendering.cpp  Shaders.h  SimulationBuilder.cpp  VirtualPathMaker.cpp
code/LIMA_MD_CALIBRATION/src/: main.cpp
code/LIMA_SERVER/: BuildMembrane.h  CMakeLists.txt  lima.cpp  mdrun.cpp  mdrun.h
code/LIMA_TESTS/: .runsettings  CMakeLists.txt
code/LIMA_TESTS/include/: ForceCorrectness.h  MDStability.h  TestUtils.h
code/LIMA_TESTS/src/: Benchmarks.h  ElectrostaticsTests.h  EnergyMinimization.cu  EnergyMinimization.cuh  FileTests.h  ForceComparisons.h  ForceCorrectness.h  ForcefieldTests.h  MDStability.cuh  MDStability.h  MembraneBuilder.h  MinorPrograms.h  SetupTests.h  TestUtils.h  Userinterface.h  main.cpp
code/LIMA_TOOLS/: CMakeLists.txt
code/LIMA_TOOLS/include/: CompoundBuilder.h  SimulationBuilder.h
code/LIMA_TOOLS/src/: BondgroupFactory.cpp  CompoundBuilder.cpp  CompoundFactory.cpp  SimulationBuilder.cpp  VirtualPathMaker.cpp
code/LIMA_UNITTESTS/: catch2main.cpp
code/dependencies/cereal/include/cereal/: README.md
code/dependencies/quickhull/: quickhull.hpp
code/include/: BoxBuilder.cuh  Constants.cuh  EngineUtils.cuh  QuantomTypes.cuh  Rasterizer.cuh  Simulation.cuh
code/obsolete/: code.txt
code/src/: Engine.cu  EngineUtils.cu  Forcefield.cu  Main.cpp  Printer.cpp
dev/: EnergyBenchmarks.asv  EnergyBenchmarks.m  PKGBUILD  PiecewiseEnergy.asv  PiecewiseEnergy.m
dev/PyTools/: CompareParametersWithGromacs.py  CompareRMSD.py  LimaTools.py  MakeLipids.py  Plot2dVec.py  Plotdata.py  Potentials.py  pdf.py
dev/VMDscripts/: instructions.txt  makefilm.tcl
dev/gmxscripts/: em.mdp  run.mdp  run.sh
distribution/arch/: freshsysteminstall.sh  install.sh  instructions.md
distribution/debian/: .copyright.kate-swp  .rules.kate-swp  builddeb.sh  control  freshsysteminstall.sh  install  install.sh
enc_temp_folder/fb415bd34583ce7f58eec5d030ea7a2e/: autorecompile.h
include/: Bodies.cuh  BoxBuilder.cuh  CompoundBuilder.h  Constants.cuh  DisplayV2.h  Engine.cuh  EngineUtils.cuh  Environment.h  Forcefield.cuh  LimaTypes.cuh  Neighborlists.cuh  Printer.h  Simulation.cuh
resources/: logo_ascii.txt
resources/Forcefields/: lima_custom_forcefield.prm
resources/Slipids - Copy/: DLPC.gro  DLPG.gro  DMPC.gro  DMPG.gro  DMPG.itp  DOPS.itp  DPPC.gro  DPPG.itp  DSPC.itp  ENTW.itp  POPC.gro  POPG.gro  PiLPC.itp  (+3 more)
src/: Analyzer.cu  Bodies.cu  BoxBuilder.cu  CompoundBuilder.cpp  DisplayV2.cpp  Engine.cu  EngineController.cu  EngineKernels.cu  EngineUtils.cu  Environment.cpp  Forcefield.cu  Main.cpp  Neighborlists.cu  Printer.cpp  Rasterizer.cu  Thermostat.cpp
(+116 files in other folders)
